manifests/codebase-operator-2.24.0-SNAPSHOT.1.tgz-manifest.yaml
---
# Source: codebase-operator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edp-codebase-operator-webhook-service
  labels:
    helm.sh/chart: codebase-operator-2.24.0-SNAPSHOT.1
    app.kubernetes.io/name: codebase-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.24.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    name: codebase-operator
---
# Source: codebase-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: codebase-operator-2.24.0-SNAPSHOT.1
    app.kubernetes.io/name: codebase-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.24.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
  name: codebase-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: codebase-operator
  template:
    metadata:
      labels:
        name: codebase-operator
    spec:
      serviceAccountName: edp-codebase-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: codebase-operator
          image: epamedp/codebase-operator:2.24.0-SNAPSHOT.1
          ports:
            - containerPort: 9443
              name: webhook-server
              protocol: TCP
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: 192Mi
            requests:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: edp-codebase-operator-webhook-certs
---
# Source: codebase-operator/templates/validation_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: codebase-operator-2.24.0-SNAPSHOT.1
    app.kubernetes.io/name: codebase-operator
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "2.24.0-SNAPSHOT.1"
    app.kubernetes.io/managed-by: Helm
  name: edp-codebase-operator-validating-webhook-configuration-default
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: edp-codebase-operator-webhook-service
        namespace: default
        path: /validate-v2-edp-epam-com-v1-codebase
    failurePolicy: Fail
    name: vcodebase.kb.io
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - default
    rules:
      - apiGroups:
          - v2.edp.epam.com
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - codebases
        scope: Namespaced
    sideEffects: None
